Add header and footer content AND background colour
In hindsight realised I shouldn't have both in the same commit

--- a/index.html
+++ b/index.html
@@ -8,13 +8,20 @@
 </head>
 <body>
     <!-- header, footer, and four SLICES in the middle -->
-    <div class="header">header</div>
+    <div class="header">
+        <div class="logo">Header Logo</div>
+        <ul>
+            <li class="link">header link one</li>
+            <li class="link">header link two</li>
+            <li class="link">header link three</li>
+        </ul>
+    </div>
 
     <div class="slice top">Hero Section!</div>
     <div class="slice info">Random information!</div>
     <div class="slice quote">Inspirational Quote!</div>
     <div class="slice action">Call to action!</div>
     
-    <div class="footer">footer</div>
+    <div class="footer">Copyright © The Odin Project 2021</div>
 </body>
 </html>
