Add content to hero layer

--- a/index.html
+++ b/index.html
@@ -17,7 +17,16 @@
         </ul>
     </div>
 
-    <div class="slice top">Hero Section!</div>
+    <div class="slice top">
+        <div class="sidebyside">
+            <div>
+                <div class="hero-text">This website is awesome</div>
+                <div class="hero-secondary">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</div>
+                <button>Sign up</button>
+            </div>
+            <div class="large-image">this is a placeholder for an image</div>
+        </div>
+    </div>
     <div class="slice info">Random information!</div>
     <div class="slice quote">Inspirational Quote!</div>
     <div class="slice action">Call to action!</div>
