--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <div class="slice top">
         <div class="side-by-side">
-            <div>
+            <div class="hero-content">
                 <div class="hero-text">This website is awesome</div>
                 <div class="hero-secondary">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</div>
                 <button>Sign up</button>
