Add unformatted content to info slice

--- a/index.html
+++ b/index.html
@@ -27,7 +27,27 @@
             <div class="large-image">this is a placeholder for an image</div>
         </div>
     </div>
-    <div class="slice info">Random information!</div>
+    <div class="slice info">
+        <div class="slice-before">Some random information.</div>
+        <div class="slice-center swatch-row">
+            <div class="pic-and-caption">
+                <div class="pic">X</div>
+                <div class="caption">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="pic-and-caption">
+                <div class="pic">X</div>
+                <div class="caption">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="pic-and-caption">
+                <div class="pic">X</div>
+                <div class="caption">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="pic-and-caption">
+                <div class="pic">X</div>
+                <div class="caption">this is some subtext under an illustration or image</div>
+            </div>
+        </div>
+    </div>
     <div class="slice quote">Inspirational Quote!</div>
     <div class="slice action">Call to action!</div>
     
