Partially lay out info slice
Things are not acting normally

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                 <div class="caption">this is some subtext under an illustration or image</div>
             </div>
         </div>
+        <div class="slice-after"></div>
     </div>
     <div class="slice quote">Inspirational Quote!</div>
     <div class="slice action">Call to action!</div>
