--- a/index.html
+++ b/index.html
@@ -49,7 +49,11 @@
         </div>
         <div class="slice-after"></div>
     </div>
-    <div class="slice quote">Inspirational Quote!</div>
+    <div class="slice quote">
+        <div class="slice-before"></div>
+        <div class="quotation">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+        <div class="slice-after">-Thor, God of Thunder</div>
+    </div>
     <div class="slice action">Call to action!</div>
     
     <div class="footer">Copyright © The Odin Project 2021</div>
