Add call to action raw content

--- a/index.html
+++ b/index.html
@@ -54,7 +54,15 @@
         <div class="quotation">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
         <div class="slice-after">-Thor, God of Thunder</div>
     </div>
-    <div class="slice action">Call to action!</div>
+    <div class="slice action">
+        <div class="blue-box">
+            <div class="action-text">
+                <div class="action-title">Call to action! It's time!</div>
+                <div class="action-subtitle">Sign up for our product by clicking that button right over there!</div>
+            </div>
+            <button class="signup-button">Sign Up</button>
+        </div>
+    </div>
     
     <div class="footer">Copyright © The Odin Project 2021</div>
 </body>
